--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                                         </label>
                                         <input id="pin-digit" type="password" placeholder="Your 4 Digit Pin" class="input input-bordered"
                                             required />
-                                        <label class="label">
+                                        <!-- <label class="label">
                                             <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
-                                        </label>
+                                        </label> -->
                                     </div>
                                     <div class="form-control mt-6">
                                         <button id="btn-login" class="btn btn-primary">Login</button>
